--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Хагги-Вагги</title>
         <link rel="stylesheet" href="style.css"/>
+        <meta name="google-site-verification" content="LMphCGcNe0qWFJSmwyxAcHwtiiOkDBDThX6Mb0NCPPU" />
     </head>
   <body>
 
